--- a/resources/scss/components/_grid.scss
+++ b/resources/scss/components/_grid.scss
@@ -58,46 +58,79 @@
 
 .theme.col-2 {
   background-color: #fd7856;
+  @media ($brk-wide) {
+    flex-basis: 16.67%;
+  }
 }
 
 .theme.col-3 {
   background-color: #deb2ee;
+  @media ($brk-wide) {
+    flex-basis: 25.00%;
+  }
 }
 
 .theme.col-4 {
   background-color: #7ee6fd;
+  @media ($brk-wide) {
+    flex-basis: 33.33%;
+  }
 }
 
 .theme.col-5 {
   background-color: #88d9a0;
+  @media ($brk-wide) {
+    flex-basis: 41.67%;
+  }
 }
 
 .theme.col-6 {
   background-color: #4da2bb;
+  @media ($brk-wide) {
+    flex-basis: 50.00%;
+  }
 }
 
 .theme.col-7 {
   background-color: #ec9fa3;
+  @media ($brk-wide) {
+    flex-basis: 58.33%;
+  }
 }
 
 .theme.col-8 {
   background-color: #fd9f85;
+  @media ($brk-wide) {
+    flex-basis: 66.67%;
+  }
 }
 
 .theme.col-9 {
   background-color: #e4757a;
+  @media ($brk-wide) {
+    flex-basis: 75.00%
+  }
 }
 
 .theme.col-10 {
   background-color: #63cc82;
+  @media ($brk-wide) {
+    flex-basis: 83.33%;
+  }
 }
 
 .theme.col-11 {
   background-color: #51ddfc;
+  @media ($brk-wide) {
+    flex-basis: 91.67%;
+  }
 }
 
 .theme.col-12 {
   background-color: #80e8d1;
+  @media ($brk-wide) {
+    flex-basis: 100%;
+  }
 }
 
 .card {
@@ -105,105 +138,38 @@
 }
 
 
-    // @media ($brk-wide) {
+.nav {
+  @media ($brk-wide) {
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: center;
+  }
+}
 
-    //   .container {
-    //     max-width: 1400px;
-    //     display: block;
-    //     margin-left: auto;
-    //     margin-right: auto;
-    //   }
-      
-    //   .centered {
-    //     display: block;
-    //     margin-left: auto;
-    //     margin-right: auto;
-    //   }
-      
-    //   .row {
-    //     flex-direction: row;
-    //   }
-      
-    //   [class^=col] {
-    //     display: flex;
-    //     justify-content: center;
-    //     margin-top: 0;
-    //     align-items: center;
-    //   }
-      
-    //   [class^=col] + [class^=col] {
-    //     margin-left: 10px;
-    //   }
-    
-    //   .col-1 {
-    //     flex-basis: 8.33%;
-    //   }
-      
-    //   .col-2 {
-    //     flex-basis: 16.67%;
-    //   }
-      
-    //   .col-3 {
-    //     flex-basis: 25.00%;
-    //   }
-      
-    //   .col-4 {
-    //     flex-basis: 33.33%;
-    //   }
-      
-    //   .col-5 {
-    //     flex-basis: 41.67%;
-    //   }
-      
-    //   .col-6 {
-    //     flex-basis: 50.00%;
-    //   }
-      
-    //   .col-7 {
-    //     flex-basis: 58.33%;
-    //   }
-      
-    //   .col-8 {
-    //     flex-basis: 66.67%;
-    //   }
-      
-    //   .col-9 {
-    //     flex-basis: 75.00%
-    //   }
-      
-    //   .col-10 {
-    //     flex-basis: 83.33%;
-    //   }
-      
-    //   .col-11 {
-    //     flex-basis: 91.67%;
-    //   }
-      
-    //   .col-12 {
-    //     flex-basis: 100%;
-    //   }
-      
-    //   .nav {
-    //     flex-direction: row;
-    //     justify-content: flex-end;
-    //     align-items: center;
-    //   }
-      
-    //   .nav-link {
-    //     flex-basis: 100px;
-    //   }
-      
-    //   .btn {
-    //     padding: 10px 30px;
-    //   }
-      
-    //   .btn + .btn {
-    //     margin-left: 10px;
-    //   }
-      
-    //   .logo {
-    //     margin-left: initial;
-    //     margin-right: initial;
-    //   }
-      
-    //   }
+.nav-link {
+  @media ($brk-wide) {
+  flex-basis: 100px;
+  }
+}
+
+.btn {
+  @media ($brk-wide) {
+  padding: 10px 30px;
+  }
+}
+
+.btn + .btn {
+  @media ($brk-wide) {
+  margin-left: 10px;
+  }
+}
+
+.logo {
+  @media ($brk-wide) {
+  margin-left: initial;
+  margin-right: initial;
+  }
+}
+
+
+
