--- a/resources/scss/components/_grid.scss
+++ b/resources/scss/components/_grid.scss
@@ -50,84 +50,84 @@
 
 
 .theme.col-1 {
-  background-color: #927bc1;
+  background-color: $purple-mountains-majesty;
   @media ($brk-wide) {
     flex-basis: 8.33%;
   }
 }
 
 .theme.col-2 {
-  background-color: #fd7856;
+  background-color: $coral;
   @media ($brk-wide) {
     flex-basis: 16.67%;
   }
 }
 
 .theme.col-3 {
-  background-color: #deb2ee;
+  background-color: $wisteria;
   @media ($brk-wide) {
     flex-basis: 25.00%;
   }
 }
 
 .theme.col-4 {
-  background-color: #7ee6fd;
+  background-color: $electric-blue;
   @media ($brk-wide) {
     flex-basis: 33.33%;
   }
 }
 
 .theme.col-5 {
-  background-color: #88d9a0;
+  background-color: $granny-smith-apple;
   @media ($brk-wide) {
     flex-basis: 41.67%;
   }
 }
 
 .theme.col-6 {
-  background-color: #4da2bb;
+  background-color: $boston-blue;
   @media ($brk-wide) {
     flex-basis: 50.00%;
   }
 }
 
 .theme.col-7 {
-  background-color: #ec9fa3;
+  background-color: $wax-flower;
   @media ($brk-wide) {
     flex-basis: 58.33%;
   }
 }
 
 .theme.col-8 {
-  background-color: #fd9f85;
+  background-color: $mona-lisa;
   @media ($brk-wide) {
     flex-basis: 66.67%;
   }
 }
 
 .theme.col-9 {
-  background-color: #e4757a;
+  background-color: $sunglo;
   @media ($brk-wide) {
     flex-basis: 75.00%
   }
 }
 
 .theme.col-10 {
-  background-color: #63cc82;
+  background-color: $emerald;
   @media ($brk-wide) {
     flex-basis: 83.33%;
   }
 }
 
 .theme.col-11 {
-  background-color: #51ddfc;
+  background-color: $malibu;
   @media ($brk-wide) {
     flex-basis: 91.67%;
   }
 }
 
 .theme.col-12 {
-  background-color: #80e8d1;
+  background-color: $turquoise-blue;
   @media ($brk-wide) {
     flex-basis: 100%;
   }
