--- a/resources/scss/utilities/_variables.scss
+++ b/resources/scss/utilities/_variables.scss
@@ -3,12 +3,22 @@ $white                    : #fff;
 $grey                     : #777;
 $very-light-grey          : #ccc;
 
-$malibu                   : #51DDFC;
-$sunglo                   : #E4757A;
+$malibu                   : #51ddfc;
+$sunglo                   : #e4757a;
 $purple-mountains-majesty : #927bc1;
 $emerald                  : #63cc82;
 $coral                    : #fd7856;
 $viking                   : #58e1c1;
+
+//Other grid colors
+
+$wisteria                 : #deb2ee;
+$electric-blue            : #7ee6fd;
+$granny-smith-apple       : #88d9a0;
+$boston-blue              : #4da2bb;
+$wax-flower               : #ec9fa3;
+$turquoise-blue           : #80e8d1;
+$mona-lisa                : #fd9f85;
 
 //Color usage
 $color-primary            : $viking;
