--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -218,7 +218,9 @@ button:-moz-focusring,
  * Correct the padding in Firefox.
  */
 fieldset {
-  padding: 0.35em 0.75em 0.625em;
+  padding: 0;
+  margin: 0;
+  border: none;
 }
 
 /**
@@ -421,6 +423,11 @@ a {
 .form {
   flex-basis: 100%;
 }
+@media (min-width: 768px) {
+  .form {
+    max-width: 430px;
+  }
+}
 
 .input {
   display: block;
@@ -438,6 +445,13 @@ a {
   width: 1px;
   height: 1px;
   overflow: hidden;
+}
+
+.field {
+  border: none;
+  margin-inline-start: 0;
+  margin-inline-end: 0;
+  min-inline-size: none;
 }
 
 /* ============================================= */
