--- a/resources/scss/base/_normalize.scss
+++ b/resources/scss/base/_normalize.scss
@@ -227,7 +227,9 @@ button:-moz-focusring,
  */
 
 fieldset {
-  padding: 0.35em 0.75em 0.625em;
+  padding: 0;
+  margin: 0;
+  border: none;
 }
 
 /**
