upgraded "very light grey" with the light function

--- a/resources/scss/utilities/_variables.scss
+++ b/resources/scss/utilities/_variables.scss
@@ -1,7 +1,7 @@
 //Descriptive color variables
 $white                    : #fff;
 $grey                     : #777;
-$very-light-grey          : #ccc;
+$very-light-grey          : lighten(#777, 33.5%);
 
 $malibu                   : #51ddfc;
 $sunglo                   : #e4757a;
