--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -485,7 +485,7 @@ a {
   margin-top: 10px;
   max-width: 100%;
   padding: 13px;
-  border: 1px solid #ccc;
+  border: 1px solid #cccccc;
 }
 
 .img-logo {
